<resources>
    <string name="app_name">SweetError</string>

    <string name="sweet_error_image">Sweet Error Image</string>
    <string name="oh_no">Oh no!</string>
    <string name="no_internet_connection">No Internet Connection!</string>
    <string name="or_try_again">or try again</string>
    <string name="try_again">Try Again</string>
    <string name="retry">Retry</string>
    <string name="empty_ui_message">No %1$s Found</string>
    <string name="empty_ui_sub_message">Tap to add %1$s</string>

    <!--Remove these strings because these part of demo module-->
    <string name="error_ui">Error UI</string>
    <string name="no_internet_ui">No Internet UI</string>
    <string name="empty_ui">Empty UI</string>
    <string name="custom_error_ui">Custom Error UI</string>

    <string name="sweets">Sweets</string>
    <string name="sweet">Sweet</string>

    <!--Custom Error Message-->
    <string name="no_sweets_found">No Sweets found to taste, It can be very long. we really don\'t know. what type of error is coming</string>
    <string name="come_later_again">Go deep and debug it, why does this happen in the first place, It should not be NPE, please come later again…</string>

    <!--Error Message-->
    <string name="error_sorry_not_able_to_load">Sorry we weren\'t able to load</string>
</resources>
